--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Application
 APP_SECRET=
-APP_API_URL=http://localhost:3333
-APP_WEB_URL=http://localhost:3000
+ENVIRONMENT=development
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/cinejump
